Fix wonky merge and handle form alignment issue

--- a/styles/layout/_forms.scss
+++ b/styles/layout/_forms.scss
@@ -6,7 +6,8 @@ form {
     border-bottom: 1px solid $grey-base;
     box-sizing: border-box;
     padding: 1rem 1rem 0rem 0rem;
-    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     font-size: 1.5rem;
     width: 100%;
     
